[gd_scene load_steps=2 format=3 uid="uid://play_mode_panel001"]

[ext_resource type="Script" path="res://scripts/ui/play_mode_panel.gd" id="1"]

[node name="PlayModePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 0.98)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 48
text = "SELECT GAME MODE"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 16
text = "Choose how you want to survive"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 20
text = "X"

[node name="ModeContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
theme_override_constants/separation = 50
alignment = 1

[node name="SingleplayerPanel" type="Panel" parent="ModeContainer"]
custom_minimum_size = Vector2(350, 300)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ModeContainer/SingleplayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="Icon" type="Label" parent="ModeContainer/SingleplayerPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "ðŸŽ®"
horizontal_alignment = 1

[node name="Title" type="Label" parent="ModeContainer/SingleplayerPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "SINGLEPLAYER"
horizontal_alignment = 1

[node name="Description" type="Label" parent="ModeContainer/SingleplayerPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Fight the zombie horde alone.
Defend the sigil at all costs.
Survive as long as you can."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="ModeContainer/SingleplayerPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="ModeContainer/SingleplayerPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "PLAY SOLO"

[node name="MultiplayerPanel" type="Panel" parent="ModeContainer"]
custom_minimum_size = Vector2(350, 300)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ModeContainer/MultiplayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="Icon" type="Label" parent="ModeContainer/MultiplayerPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "ðŸ‘¥"
horizontal_alignment = 1

[node name="Title" type="Label" parent="ModeContainer/MultiplayerPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "MULTIPLAYER"
horizontal_alignment = 1

[node name="Description" type="Label" parent="ModeContainer/MultiplayerPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Team up with friends online.
Host or join lobbies via Steam.
Coordinate to survive together."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="ModeContainer/MultiplayerPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="ModeContainer/MultiplayerPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "FIND MATCH"

[node name="BottomInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = -30.0
theme_override_font_sizes/font_size = 14
text = "Press ESC to return to main menu"
horizontal_alignment = 1
